# knative-webhook-aws-kinesis-http

./: .releaserc  Dockerfile  README.md  app.py  createtoken.py  deploy.yaml  pyproject.toml
.github/workflows/: main.yml
manifests/: cert.yaml  deploy.yaml
tests/data/: sample.json
