[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["rfaircloth-splunk <rfaircloth@splunk.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.1"
requests = "^2.26.0"
gunicorn = "^20.1.0"
Authlib = "^0.15.4"
python-dateutil = "^2.8.2"
splunk-hec-ftf = "^1.0.1"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
